--- a/css/style.css
+++ b/css/style.css
@@ -16,20 +16,10 @@ body{
     justify-content:space-around;
     flex-wrap: wrap; */
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(310px, 1fr));
     gap: 2rem;
  }
 
- /* .briefcase-summary__header {
-   margin-bottom: 3rem;
-   text-align: center;
- } */
- 
- .briefcase-summary__content {
-   display: grid;
-   grid-template-columns: repeat(auto-fill, minmax(310px, 1fr));
-   gap: 2rem;
- }
  
  h1{
     text-align: center;
@@ -97,7 +87,8 @@ form{
     display: flex;
  }
  .lateral{
-    width: 280px;
+    width: 352px;
+    border-right: 1px solid #D1D1D1;
  }
  .main{
   width: 100%;
@@ -119,5 +110,19 @@ form{
    padding: 1.5rem 4rem;
  }
  header{
+   padding: 1rem;
    height: 4.375rem;
+   border-bottom: 1px solid #D1D1D1;
+ }
+ .logo{
+width: 250px;
+ }
+
+ .content-welcome{
+   width: 500px;
+   display: flex;
+   gap: 1rem;
+ }
+ img{
+   object-fit: contain;
  }
