--- a/css/style.css
+++ b/css/style.css
@@ -97,7 +97,20 @@ form{
  .lateral{
     width: 360px;
     border-right: 1px solid #D1D1D1;
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
  }
+
+ .lateral a {
+ text-decoration: none;
+ font-size: 1.2rem;
+ color: #fff;
+ /* background: gray; */
+ padding: 0 1rem;
+ border-radius: 0px 25px 25px 0px;
+}
+
  .main{
   width: 100%;
  }
@@ -129,8 +142,30 @@ width: 250px;
  .content-welcome{
    width: 500px;
    display: flex;
-   gap: 1rem;
+   gap: 2rem;
  }
  img{
    object-fit: contain;
+ }
+
+ .lateral__links{
+   display: flex;
+   align-items: center;
+ }
+
+ .option-selected{
+   background: gray;
+ }
+
+ .colors{
+   width:9.68rem;
+   height: 4.06rem;
+   background-color: darkorange;
+   border-radius: 4px;
+ }
+
+ .colors-opened{
+   position: absolute;
+   top: 7.7rem;
+   left: 29.5rem;
  }
