--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,6 @@
 @import url(global.css);
-
-body{
-
-    background: #1D2128;
- }
- *{
-    font-family: 'Roboto', sans-serif;
-    box-sizing: border-box;
- }
+@import url(components/header.css);
+@import url(components/sidebar.css);
  .container{
     margin: 32px 0;
     text-align: center;
@@ -90,26 +83,6 @@ form{
  
  /*como centrar un boton absolute o un div*/
  
- .section{
-    display: flex;
-    height: 100vh;
- }
- .lateral{
-    width: 360px;
-    border-right: 1px solid #D1D1D1;
-    display: flex;
-    flex-direction: column;
-    gap: 1.5rem;
- }
-
- .lateral a {
- text-decoration: none;
- font-size: 1.2rem;
- color: #fff;
- /* background: gray; */
- padding: 0 1rem;
- border-radius: 0px 25px 25px 0px;
-}
 
  .main{
   width: 100%;
@@ -123,34 +96,9 @@ form{
    justify-content: space-between;
  }
 
- svg{
-   width: 2.25rem;
-   height: 2.25rem;
- }
+
  .main__notes{
    padding: 1.5rem 4rem;
- }
- header{
-   padding: 1rem;
-   height: 4.375rem;
-   border-bottom: 1px solid #D1D1D1;
- }
- .logo{
-width: 250px;
- }
-
- .content-welcome{
-   width: 500px;
-   display: flex;
-   gap: 2rem;
- }
- img{
-   object-fit: contain;
- }
-
- .lateral__links{
-   display: flex;
-   align-items: center;
  }
 
  .option-selected{
@@ -160,12 +108,54 @@ width: 250px;
  .colors{
    width:9.68rem;
    height: 4.06rem;
-   background-color: darkorange;
+   padding: .2rem;
+   background-color: #fff;
    border-radius: 4px;
+   display: flex;
+   justify-content: space-between;
+   flex-wrap: wrap;
+ }
+
+ .color{
+ width: 1.56rem;
+ height: 1.56rem;
+ border-radius: 100px;
+ background-color: aqua;
  }
 
  .colors-opened{
-   position: absolute;
+   position:  absolute;
    top: 7.7rem;
-   left: 29.5rem;
+   left: 47.3rem;
+ }
+
+ .color1{
+   background-color: #FFFFFF;
+ }
+ .color2{
+   background-color: #F28B82;
+ }
+ .color3{
+   background-color: #FBBC04;
+ }
+ .color4{
+   background-color:  #FFF475;
+ }
+ .color5{
+   background-color: #CCFF90;
+ }
+ .color6{
+   background-color: #A7FFEB;
+ }
+ .color7{
+   background-color: #CBF0F8;
+ }
+ .color8{
+   background-color: #AECBFA;
+ }
+ .color9{
+   background-color: #D7AEFB;
+ }
+ .color10{
+   background-color: #FDCFE8;
  }
