Add links to trashpage

--- a/css/style.css
+++ b/css/style.css
@@ -109,7 +109,7 @@ form{
    width:9.68rem;
    height: 4.06rem;
    padding: .2rem;
-   background-color: #fff;
+   background: #1D2128;
    border-radius: 4px;
    display: flex;
    justify-content: space-between;
