Fix  bugs of font color & form

--- a/css/global/typography.css
+++ b/css/global/typography.css
@@ -8,8 +8,7 @@ body {
   font-size: 1.125rem;
   line-height: 2rem;
   font-family: var(--font-primary);
-  color: var(--primary-darker);
-  background-color: var(--gray-100);
+  color: black;
 }
 
 h1,
