--- a/css/global.css
+++ b/css/global.css
@@ -7,16 +7,32 @@
 @import url("global/utils.css");
 @import url("global/input.css");
 
-body{
+body {
+  background: #1d2128;
+}
+* {
+  font-family: "Roboto", sans-serif;
+  box-sizing: border-box;
+}
 
-    background: #1D2128;
- }
- *{
-    font-family: 'Roboto', sans-serif;
-    box-sizing: border-box;
- }
+svg {
+  width: 2.25rem;
+  height: 2.25rem;
+}
 
- svg{
-    width: 2.25rem;
-    height: 2.25rem;
-  }
+.svg {
+  background-color: rgba(250, 250, 250, 0.5);
+  border-radius: 50%;
+  fill: #999b9e;
+  margin-left: 1.8125rem;
+}
+
+.svg use {
+  transform: scale(0.8);
+}
+
+svg:hover {
+  background-color: #999b9e;
+  fill: #fff;
+  color: white;
+}
