--- a/css/style.css
+++ b/css/style.css
@@ -3,11 +3,11 @@
 @import url(components/sidebar.css);
 .container {
   margin: 32px 0;
-  text-align: center;
   padding: 0;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(310px, 1fr));
+  grid-template-columns: repeat(auto-fill, 260px);
   gap: 2rem;
+  justify-content: center;
 }
 
 h1 {
@@ -17,7 +17,7 @@ h1 {
 .nota {
   position: relative;
   background-color: white;
-  border: 1px solid white;
+  padding: 20px 20px 10px 20px;
   height: 260px;
   width: 260px;
   border: none;
@@ -25,7 +25,11 @@ h1 {
   font-weight: 400;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: space-between;
+}
+
+.nota__text :first-child {
+  font-weight: 700;
 }
 
 textarea,
@@ -68,10 +72,6 @@ button {
 
 .nota button {
   color: gray;
-  /* position: absolute; */
-  /* bottom: -40px;
-    left: 0;
-    right: 0; */
   border-radius: 16px;
 }
 .container-notas {
@@ -121,7 +121,7 @@ button {
 .colors-opened {
   display: flex;
   position: absolute;
-  bottom: 4.2rem;
+  bottom: 3.2rem;
   left: -2rem;
 }
 
