--- a/css/components/sidebar.css
+++ b/css/components/sidebar.css
@@ -3,7 +3,7 @@
   min-height: 100vh;
 }
 .lateral {
-  width: 360px;
+  min-width: 280px;
   border-right: 1px solid #d1d1d1;
   display: flex;
   flex-direction: column;
@@ -13,12 +13,19 @@
   text-decoration: none;
   font-size: 1.2rem;
   color: #fff;
-  /* background: gray; */
-  padding: 0 1rem;
+  padding: 0.5rem 1rem;
   border-radius: 0px 25px 25px 0px;
 }
 
 .lateral__links {
   display: flex;
   align-items: center;
+}
+
+.lateral__links:hover {
+  background-color: #999b9e;
+}
+
+.lateral use {
+  fill: #fff;
 }
