--- a/css/global/utils.css
+++ b/css/global/utils.css
@@ -14,12 +14,12 @@
   font-weight: 600;
 }
 
-.weight-700{
-font-weight: 700;
+.weight-700 {
+  font-weight: 700;
 }
 
 .overline {
-  letter-spacing: .125rem;
+  letter-spacing: 0.125rem;
   text-transform: uppercase;
 }
 
@@ -46,9 +46,9 @@ font-weight: 700;
 }
 
 /* 4 = 1rem = 16px; 1 = 0.25rem = 4px */
-.my-0\.5{
-  margin-top: .5rem;
-  margin-bottom: .5rem;
+.my-0\.5 {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
 }
 
 .mb-1 {
@@ -67,17 +67,16 @@ font-weight: 700;
   color: var(--gray-400);
 }
 
-.text-primary_darker{
+.text-primary_darker {
   color: var(--primary-darker);
 }
 
-.text-gray-300{
+.text-gray-300 {
   color: var(--gray-300);
 }
 
-
 .text-white {
-  color: var(--white)
+  color: var(--white);
 }
 
 .bg-primary-darker {
@@ -100,22 +99,22 @@ font-weight: 700;
   gap: 1.5rem;
 }
 
-.gap-0-75{
+.gap-0-75 {
   gap: 0.75rem;
 }
 
-.gap-1{
-  gap: 1rem
+.gap-1 {
+  gap: 1rem;
 }
-.center{
- align-items: center;
+.center {
+  align-items: center;
 }
 
-.help{
+.help {
   width: 12px;
   height: 12px;
 }
-textarea{
+textarea {
   border: white;
 }
 
@@ -127,6 +126,6 @@ textarea{
   margin-bottom: 1rem;
 }
 
-.border-gray{
+.border-gray {
   border: 1px solid gray;
 }
