--- a/css/global/input.css
+++ b/css/global/input.css
@@ -4,8 +4,9 @@
   gap: 4px;
 }
 
-.input, 
+.input,
 .input-container__input {
+  position: relative;
   color: var(--green-900);
   width: 100%;
   padding: 0.5rem 0.75rem;
@@ -23,9 +24,9 @@
   color: var(--gray-500);
 }
 
-.input:focus, 
-.select:focus, 
-.input-container__input:focus, 
+.input:focus,
+.select:focus,
+.input-container__input:focus,
 .radio__input:focus,
 .checkbox__input:focus {
   outline: none;
@@ -34,18 +35,18 @@
   box-shadow: 0px 0px 0px 3px rgba(58, 130, 77, 0.6);
 }
 
-.input:invalid:not(:focus), 
+.input:invalid:not(:focus),
 .input-container__input:invalid:not(:focus) {
   border: 2px solid var(--red-500);
   /* box-shadow: 0px 0px 4px var(--red-500); */
 }
 
 .input__error {
-  color: var(--red-500)
+  color: var(--red-500);
 }
 
 .input__help {
-  color: var(--gray-500)
+  color: var(--gray-500);
 }
 
 /* SELECT */
@@ -67,7 +68,8 @@
 
 /* RADIO BUTTON */
 
-.radio, .checkbox {
+.radio,
+.checkbox {
   display: flex;
   align-items: flex-start;
   gap: 8px;
@@ -86,17 +88,20 @@
   border: 4px solid var(--green-600);
 }
 
-.radio__text-group, .checkbox__text-group {
+.radio__text-group,
+.checkbox__text-group {
   display: flex;
   flex-direction: column;
 }
 
-.radio__label, .checkbox__label {
-  color: var(--green-900)
+.radio__label,
+.checkbox__label {
+  color: var(--green-900);
 }
 
-.radio__help, .checkbox__help {
-  color: var(--gray-500)
+.radio__help,
+.checkbox__help {
+  color: var(--gray-500);
 }
 
 .checkbox__input {
