--- a/css/components/header.css
+++ b/css/components/header.css
@@ -1,18 +1,30 @@
-header{
-    padding: 1rem;
-    height: 4.375rem;
-    border-bottom: 1px solid #D1D1D1;
-  }
-  .logo{
- width: 250px;
-  }
+header {
+  padding: 1rem;
+  height: 4.375rem;
+  border-bottom: 1px solid #d1d1d1;
+}
+.logo {
+  width: 250px;
+}
 
-  .content-welcome{
-    width: 500px;
-    display: flex;
-    gap: 2rem;
+.content-welcome {
+  display: flex;
+  gap: 2rem;
+}
+
+img {
+  object-fit: contain;
+}
+
+.content__welcome {
+  margin-inline: auto;
+}
+
+@media screen and (max-width: 700px) {
+  .content-welcome {
+    width: auto;
   }
-  
-  img{
-    object-fit: contain;
+  .logo {
+    width: auto;
   }
+}
