--- a/css/components/sidebar.css
+++ b/css/components/sidebar.css
@@ -29,3 +29,40 @@
 .lateral use {
   fill: #fff;
 }
+
+@media screen and (max-width: 700px) {
+  .section {
+    flex-direction: column-reverse;
+  }
+
+  .lateral {
+    position: sticky;
+    bottom: 0rem;
+    background-color: #1d2128;
+    z-index: 1;
+    min-width: auto;
+    flex-direction: row;
+    justify-content: center;
+    gap: 0;
+    padding: 0;
+    border: none;
+    border-top: 1px solid #999b9e;
+  }
+  .lateral a {
+    border-radius: 0;
+    flex-grow: 1;
+    justify-content: center;
+  }
+  .lateral__links:hover {
+    background-color: #1d2128;
+  }
+
+  .lateral__links p {
+    display: none;
+  }
+
+  .lateral__links svg {
+    width: 50px;
+    height: 50px;
+  }
+}
