Add styles for pinned icon & refactor links

--- a/css/style.css
+++ b/css/style.css
@@ -166,10 +166,16 @@ button {
     flex-direction: column;
     justify-content: space-between;
   }
+  .main {
+    min-height: 100vh;
+  }
 }
 
 @media screen and (max-width: 650px) {
   .container {
     justify-content: center;
+  }
+  .main {
+    min-height: 100vh;
   }
 }
